--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "keywords": [
     "baikbingo",
     "mock",
-    "mock serve"
+    "mock-serve",
+    "vite",
+    "vite-plugin"
   ],
   "author": {
     "name": "Zmkwjx",
